--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/imagenes/Vector.png" type="image/x-icon" />
     <title>Encriptador</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/body.css">
-    <link rel="stylesheet" href="./assets/css/cuerpo.css">
+    <link rel="stylesheet" href="./assets/css/cuerpo/cuerpo.css">
     <link rel="stylesheet" href="./assets/css/cabecera.css">
-    <link rel="stylesheet" href="./assets/css/cuerpo/cuerpo-textArea.css">
-    <link rel="stylesheet" href="./assets/css/cuerpo/informacion.css">
+    <link rel="stylesheet" href="./assets/css/cuerpo/textAreas.css">
     <link rel="stylesheet" href="./assets/css/cuerpo/botones.css">
-    <link rel="stylesheet" href="./assets/css/cuerpo/textoEncriptado.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
@@ -39,8 +39,9 @@
                             </div>
                     </div>
                 </section>
-                <section class= "texto__encriptado ">
-                    <img src="./assets/imagenes/Muñeco.png" alt="muneco" id="muneco" class="muneco">
+                <section class="texto__encriptado ">
+                    <img src="/assets/imagenes/Muñeco.png" alt="Muñeco Encriptador" id="muneco" class="muneco">
+
                     <textarea id="mensajeFinal" class="textarea__encriptado" placeholder="Ningún mensaje fue encontrado"></textarea>
                         <p id="info">Ingresa el texto que desees encriptar o desencriptar.</p>    
                         <button class="btn__copiar ocultar">Copiar</button>
@@ -49,9 +50,9 @@
         </main>
         <div class="footer">
             <footer>
-                <p class="creador">created by Rodrigo</p>
+                <p class="creador">Creado por Hernán Rodrigo Bustamante</p>
                     <br>
-                <p class="usuario">@Rodrigo</p>
+                <p class="mail">bustamanterodrigo15@gmail.com</p>
             </footer>    
         </div>
         <script src="assets/components/script.js"></script>
