--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </section>
                 <section class="texto__encriptado ">
-                    <img src="/assets/imagenes/Muñeco.png" alt="Muñeco Encriptador" id="muneco" class="muneco">
+                    <img src="./assets/imagenes/Muñeco.png" alt="Muñeco Encriptador" id="muneco" class="muneco">
 
                     <textarea id="mensajeFinal" class="textarea__encriptado" placeholder="Ningún mensaje fue encontrado"></textarea>
                         <p id="info">Ingresa el texto que desees encriptar o desencriptar.</p>    
